MP-2255: Add GET environment status per envId
