# src/UIAPIServer/api.yaml
@@ -842,8 +842,62 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/DFSPDetails"
+  /environments/{envId}/status:
+    get:
+      summary: Retrieves environment status with Connection Wizard UI phase and step completion status
+      operationId: getEnvStatus
+      parameters:
+        - name: envId
+          in: path
+          description: ID of the environment to get satus
+          required: true
+          schema:
+            type: string
+      responses:
+          200:
+            description: successful operation
+            content:
+              application/json:
+                schema:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/EnvironmentStatus'
 components:
   schemas:
+    Statuses:
+      type: string
+      enum:
+        - NOT_STARTED
+        - IN_PROGRESS
+        - COMPLETED
+    Phases:
+      type: string
+      enum:
+        - BUSINESS_SETUP
+        - TECHNICAL_SETUP
+    Identifier:
+      type: string
+      enum:
+        - ID_GENERATION
+        - ENDPOINTS
+        - CSR_EXCHANGE
+        - CERTIFICATE_AUTHORITY
+        - SERVER_CERTIFICATES_EXCHANGE
+        - JWS_CERTIFICATES
+    EnvironmentStatus:
+      type: object
+      properties:
+        phase:
+          $ref: '#/components/schemas/Phases'
+        steps:
+          type: array
+          items:
+            type: object
+            properties:
+              identifier:
+                $ref: '#/components/schemas/Identifier'
+              status:
+                $ref: '#/components/schemas/Statuses'
     Batch:
       type: object
       properties:
